tests/negative/neg_statement_label_assignment.safe
-- Test: neg_statement_label_assignment
-- Description: Statement labels before assignments remain unsupported.
-- Expected: REJECT unsupported_source_construct

package Statement_Label_Assignment_Test

   type Counter is range 0 to 10;

   function Main
      Value : Counter = 0;

      Label_1: Value = 1;

